order online link
updated the order online link

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
 
 <div id="navbar" class="row">
 	<div class="mr-auto p-2 fly-in"><i class="fa fa-map-marker" aria-hidden="true"></i> Locations</div>
-	<div class="p-2"><a href="https://www.orderinout.com/banzo/madison-east" target="_blank">Order Online</a></div>
+	<div class="p-2"><a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">Order Online</a></div>
 	<div class="p-2"><a href="#contact" class="scroll">Contact Us</a></div>
 	<div class="p-2"><a href="#menu" class="scroll">Menu</a></div>
 	<div class="p-2"><a href="#menu" class="scroll">Catering</a></div>
