--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+@import "nav.css";
+@import "menu.css";
+@import "footer.css";
+
 html, body{ height: 100vh; }
 .parallax-window{
     min-height: 50vw;
@@ -138,157 +142,6 @@ label {
 .center{
     text-align: center;
 }
-
-/* nav */
-
-#navbar{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    padding: 10px;
-    margin: 0;
-    z-index: 5;
-    color:#fff;
-    background-color: transparent;
-}
-#navbar a{
-    color: inherit;
-}
-#navbar > div:hover{
-    cursor: pointer;
-}
-.close{
-    float: right;
-    padding: 5px;
-}
-
-.nav-bg.show {
-    position: fixed;
-    height: 100vh;
-    width: 100vw;
-    background: rgba(0, 0, 0, 0.85);
-    -webkit-transition: background .4s;
-    transition: background .4s;
-    z-index: 10;
-}
-.nav-container{
-    position: fixed;
-    right: 0;
-    bottom: auto;
-    left: 0;
-    top: 30%;
-    z-index: 10;
-    height: auto;
-    -webkit-overflow-scrolling: touch;
-    -webkit-transform: translateX(-600%);
-    -moz-transform: translateX(-600%);
-    -ms-transform: translateX(-600%);
-    transform: translateX(-600%);
-    -webkit-transition: transform .3s ease-in-out;
-    -moz-transition: transform .3s ease-in-out;
-    transition: transform .3s ease-in-out;
-    width:100%;
-    max-width: 451px;
-    margin: auto;
-    display: table;
-}
-.nav-container.slide {
-    -webkit-transform: translateX(0);
-    -moz-transform: translateX(0);
-    -ms-transform: translateX(0);
-    transform: translateX(0);
-    -webkit-transition: transform .3s ease-in-out;
-    -moz-transition: transform .3s ease-in-out;
-    transition: transform .3s ease-in-out;
-}
-.navbar-fixed {
-    background-color: #fff!important;
-    position: fixed !important;
-    color:#000 !important;
-    border-bottom:1px solid #ccc;
-}
-.text{
-    padding: 15px 3vw;
-}
-.collapse{
-    display: none;
-    padding:0;
-}
-.open{
-    padding:6vw;
-}
-
-/* menu styles */
-.collapse.show{
-  width: 100%;
-}
-#menu .card-body{
-  background-color: #252424;
-  color: #fff;
-  margin-bottom: 20px;
-}
-.menu-section{ z-index:10; position:relative;}
-.menu-section-inner{
-	max-width:1120px;
-	margin:80px auto;
-	background-color:#fff;
-	position:relative;
-}
-.menu-headline{
-	background-color:#ccff7f;
-	padding:8px 15px 5px;
-	font-size:32px;
-	text-transform:uppercase;
-	display:inline-block;
-	color:#000;
-}
-.menu-ooo{font-size: 12px;}
-.menu-title{font-size:18px; font-weight: bold; margin-bottom: 8px;color: #ffcc00;}
-.menu-item{ line-height:.8; margin:20px 0; border-left: 1px solid #fff; padding-left: 10px;}
-.menu-descript{ font-size:16px; line-height:1.2;}
-
-
-.muted{ color:#ccc !important;}
-ul.cater-list{ padding-left:16px;}
-ul.cater-list li{ list-style:none;}
-.delivery-section{ position:relative; background-color:rgba(203, 62, 67, 0.55); padding-bottom:35px; z-index:10;}
-.btn-group-vertical ul li.delivery a{ padding: 6px 25px !important; border-left:3px solid #000 !important;}
-
-
-/* FOOTER */
-footer.site-footer{
-    background-image: linear-gradient(to top, #585858 0%, #4e6775 100%);
-    color:#fff;
-}
-footer.site-footer ul.social-media-list{
-    padding:0;
-}
-footer.site-footer ul.social-media-list li,
-.banzo-social .fa{
-    display: inline-block;
-    font-size: 2rem;
-    margin-right:15px;
-}
-footer.site-footer ul.social-media-list li a,
-.btn-link{
-    color: #fff;
-}
-footer.site-footer ul.social-media-list li a:hover,
-.btn-link:hover{
-    color: inherit;
-    text-shadow:-3px 2px 0px #000;
-}
-.modal-dialog {
-    max-width: 800px;
-    margin: 30px auto;
-    color:#000;
-}
-@media(max-width: 767px) and (min-width: 1px){
-    footer.site-footer{
-        text-align: center;
-    }
-}
-
 @media(max-width: 575px) and (min-width: 1px){
     .form-row .col-sm:first-child{
         padding-bottom: 10px;
