--- a/css/menu.css
+++ b/css/menu.css
@@ -22,15 +22,15 @@
 	display:inline-block;
 	color:#000;
 }
-.menu-ooo{font-size: 12px;}
-.menu-title{font-size:18px; font-weight: bold; margin-bottom: 8px;color: #ffcc00;}
+.menu-ooo{font-size: 12px; margin-bottom: 0;}
+.menu-title{font-size:18px; font-weight: bold; margin-bottom: 8px;color: #ffcc00; line-height: 1.2;}
 .menu-item{ line-height:.8; margin:20px 0; border-left: 1px solid #fff; padding-left: 10px;}
 .menu-descript{ font-size:16px; line-height:1.2;}
 
 vegan {
   background-color: white;
-  height: 15px;
-  width: 15px;
+  height: 18px;
+  width: 18px;
   text-align: center;
   display: inline-block;
   border-radius: 50%;
