--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
 	<div class="p-2"><a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">Order Online</a></div>
 	<div class="p-2"><a href="#contact" class="scroll">Contact Us</a></div>
 	<div class="p-2"><a href="#menu" class="scroll">Menu</a></div>
-	<div class="p-2"><a href="#menu" class="scroll">Catering</a></div>
+	<div class="p-2"><a href="#catering" class="scroll">Catering</a></div>
 </div>
 <div class="nav-bg fly-in">
 	<div class="nav-container rounded d-flex justify-content-center">
