--- a/css/nav.css
+++ b/css/nav.css
@@ -76,3 +76,17 @@
 .open{
     padding:6vw;
 }
+
+/* new hp nav */
+nav.navbar-hp {
+    background-color: rgba(0, 0, 0, .4);
+    position: fixed;
+    color: #fff;
+    top: 0;
+    z-index: 2;
+    width: 100%;
+}
+.navbar-hp a {
+    color: #fff;
+    text-decoration: underline;
+}
