--- a/css/nav.css
+++ b/css/nav.css
@@ -86,6 +86,9 @@ nav.navbar-hp {
     z-index: 2;
     width: 100%;
 }
+.navbar-hp .navbar-collapse{
+  display: flex;
+}
 .navbar-hp a {
     color: #fff;
     text-decoration: underline;
