--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
     {% include google-analytics.html %}
   {% endif %}
   <!--font awesome-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
  <!--typekit-->
   <script type="text/javascript" src="//use.typekit.net/hqf7bgo.js"></script>
@@ -28,5 +28,5 @@
   <!-- custom css -->
   <link rel="stylesheet" type="text/css" href="{{ "/css/main.css" | relative_url  }}">
 
-  
+
 </head>
