--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ html, body{ height: 100vh; }
     background-position: center center;
     height: 100vh;
     background-size: cover;
+    background-attachment: fixed;
     position: relative;
     overflow: hidden;
     display: block;
@@ -117,6 +118,11 @@ h2.title.menu{
         font-size: 1.2rem;
         padding: 7vw 10px;
     }
+}
+#menu{
+  background-image: url(/images/banzo-2.jpg);
+  background-size: cover;
+  background-attachment: fixed;
 }
 label {
     margin-bottom: .2rem;
