slide menu attempt 1

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 @import "nav.css";
 @import "menu.css";
 @import "footer.css";
+@import "fly-in.css";
 
 html, body{ height: 100vh; }
 .parallax-window{
