--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -74,7 +74,7 @@
     </div>
   </div>
 
-  
+
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
@@ -84,6 +84,7 @@
 <script src="/js/sticky.min.js"></script>
 <script src="/js/waypoint-scroll.js"></script>
 <script src="/js/parallax.min.js"></script>
+<script src="/js/slidebars.min.js"></script>
 <script src="/js/my.js"></script>
 
 </footer>
