--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,8 @@
 
   <!-- custom css -->
   <link rel="stylesheet" type="text/css" href="{{ "/css/main.css" | relative_url  }}">
-  <link rel="stylesheet" type="text/css" href="{{ "/css/slidebars.min.css" | relative_url  }}">
+  <link rel="stylesheet" type="text/css" href="{{ "/css/slidebars.css" | relative_url  }}">
+  <link rel="stylesheet" type="text/css" href="{{ "/css/slidebar-style.css" | relative_url  }}">
 
 
 </head>
