--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -75,7 +75,7 @@
   </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
@@ -84,7 +84,8 @@
 <script src="/js/sticky.min.js"></script>
 <script src="/js/waypoint-scroll.js"></script>
 <script src="/js/parallax.min.js"></script>
-<script src="/js/slidebars.min.js"></script>
+<script src="/js/slidebars.js"></script>
+<script src="/js/slidebar-scripts.js"></script>
 <script src="/js/my.js"></script>
 <script>
  ( function ( $ ) {
