--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
               {% if site.facebook_username %}
               <li>
                 <a href="https://www.facebook.com/{{ site.facebook_username }}">
-                  <<i class="fab fa-facebook-f"></i>
+                  <i class="fab fa-facebook-f"></i>
                 </a>
               </li>
               {% endif %}
