--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -4,13 +4,26 @@
 
 	<body>
 
-	<div class="page-content">
+	<div canvas="container" class="page-content">
 		<div class="wrap">
 			{{ content }}
 		</div>
+
+		{% include footer.html %}
 	</div>
-	
-	{% include footer.html %}
+
+	<!-- slide in menu -->
+	<div id="fly-in-menu" off-canvas="slidebar-1 left reveal">
+		<div class="slideOut js-close-left-slidebar">Close</div>
+		<ul class="align-self-center">
+			<li>Order Online</li>
+			<li>About Us</li>
+			<li>Delivery Map</li>
+			<li>Restaurant Menu</li>
+			<li>Catering Menu</li>
+			<li>Contact Us</li>
+		</ul>
+	</div>
 
 	</body>
 </html>
