--- a/_includes/fixedNav.html
+++ b/_includes/fixedNav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-hp">
+<nav canvas class="navbar navbar-expand-lg navbar-hp">
 	<div class="navbar-collapse" id="navbarText">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
