--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -14,7 +14,7 @@
 
 	<!-- slide in menu -->
 	<div id="fly-in-menu" off-canvas="slidebar-1 left reveal">
-		<div class="slideOut js-close-left-slidebar">Close</div>
+		<div class="slideOut js-close-left-slidebar"><i class="far fa-times-circle"></i></div>
 		<ul class="align-self-center">
 			<li>Order Online</li>
 			<li>About Us</li>
