--- a/_includes/fixedNav.html
+++ b/_includes/fixedNav.html
@@ -8,5 +8,10 @@
 		<span class="navbar-text">
 			Open 7 days 11am - 9pm | <i class="fas fa-phone"></i> <tel>(608) 441-2002</tel>
 		</span>
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item">
+				<a class="nav-link js-toggle-right-slidebar"><i class="fab fa-instagram"></i> <i class="fas fa-ellipsis-v"></i></a>
+			</li>
+		</ul>
 	</div>
 </nav>
