--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -12,7 +12,7 @@
 		{% include footer.html %}
 	</div>
 
-	<!-- slide in menu -->
+	<!-- Left slide in menu -->
 	<div id="fly-in-menu" off-canvas="slidebar-1 left reveal">
 		<div class="slideOut js-close-left-slidebar"><i class="far fa-times-circle"></i></div>
 		<ul class="align-self-center">
@@ -22,6 +22,13 @@
 			<li>Restaurant Menu</li>
 			<li>Catering Menu</li>
 			<li>Contact Us</li>
+		</ul>
+	</div>
+	<!-- Right instagram feed -->
+	<div id="fly-in-menu" off-canvas="instagram right reveal">
+		<div class="slideOut js-close-right-slidebar"><i class="far fa-times-circle"></i></div>
+		<ul class="align-self-center">
+			<li>Instagram Feed</li>
 		</ul>
 	</div>
 
