--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,13 +80,13 @@
       controller.toggle( 'slidebar-1' );
     } );
 	 // Toggle Slidebars
-    $( '.toggle-instagram' ).on( 'click', function ( event ) {
+    $( '.toggle-insta' ).on( 'click', function ( event ) {
       // Stop default action and bubbling
       event.stopPropagation();
       event.preventDefault();
 
       // Toggle the Slidebar with id 'instagram'
-      controller.toggle( 'instagram' );
+      controller.toggle( 'insta' );
     } );
  } ) ( jQuery );
 </script>
