--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,13 +80,13 @@
       controller.toggle( 'slidebar-1' );
     } );
 	 // Toggle Slidebars
-    $( '.toggle-insta' ).on( 'click', function ( event ) {
+    $( '.toggle-slidebar-2' ).on( 'click', function ( event ) {
       // Stop default action and bubbling
       event.stopPropagation();
       event.preventDefault();
 
-      // Toggle the Slidebar with id 'instagram'
-      controller.toggle( 'insta' );
+      // Toggle the Slidebar with id 'slidebar-2'
+      controller.toggle( 'slidebar-2' );
     } );
  } ) ( jQuery );
 </script>
