--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -25,7 +25,7 @@
 		</ul>
 	</div>
 	<!-- Right instagram feed -->
-	<div id="insta-menu" off-canvas="insta right shift">
+	<div id="insta-menu" off-canvas="slidebar-2 right shift">
 		<div class="slideOut js-close-right-slidebar"><i class="far fa-times-circle"></i></div>
 		<ul class="align-self-center">
 			<li>Instagram Feed</li>
