--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -13,7 +13,7 @@
 	</div>
 
 	<!-- Left slide in menu -->
-	<div id="fly-in-menu" off-canvas="slidebar-1 left reveal">
+	<div id="fly-in-menu" off-canvas="slidebar-1 left shift">
 		<div class="slideOut js-close-left-slidebar"><i class="far fa-times-circle"></i></div>
 		<ul class="align-self-center">
 			<li>Order Online</li>
