--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -19,7 +19,7 @@
 			<li>Order Online</li>
 			<li>About Us</li>
 			<li>Delivery Map</li>
-			<li><<a href="#menu">Restaurant Menu</a></li>
+			<li><a href="#menu">Restaurant Menu</a></li>
 			<li>Catering Menu</li>
 			<li>Contact Us</li>
 		</ul>
