--- a/_includes/fixedNav.html
+++ b/_includes/fixedNav.html
@@ -6,7 +6,7 @@
 			</li>
 		</ul>
 		<span class="navbar-text">
-			Open 7 days 11am - 9pm | <i class="fas fa-phone"></i> <tel>(608) 441-2002</tel>
+			<img src="images/banzo-header-logo.png" alt="Banzo">
 		</span>
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item">
