--- a/_includes/fixedNav.html
+++ b/_includes/fixedNav.html
@@ -1,4 +1,4 @@
-<nav canvas class="navbar navbar-expand-lg navbar-hp">
+<nav canvas class="navbar navbar-expand-lg navbar-hp hpv2">
 	<div class="navbar-collapse" id="navbarText">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
@@ -6,7 +6,7 @@
 			</li>
 		</ul>
 		<span class="navbar-text">
-			<img src="images/banzo-header-logo.png" alt="Banzo">
+			<img src="../images/banzo-header-logo.png" alt="Banzo">
 		</span>
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item">
