--- a/css/nav.css
+++ b/css/nav.css
@@ -79,11 +79,12 @@
 
 /* new hp nav */
 nav.navbar-hp {
-    background-color: rgba(0, 0, 0, .4);
+    background-color: #fff;
     position: fixed;
-    color: #fff;
+    color: #333;
     top: 0;
     z-index: 2;
+    font-size: 1.5rem;
     width: 100%;
 }
 .navbar-hp .navbar-collapse{
