flexing the left nav

--- a/_includes/slide-in-nav.html
+++ b/_includes/slide-in-nav.html
@@ -1,15 +1,17 @@
 <div id="fly-in-menu" off-canvas="slidebar-1 left shift">
-  <div class="slideOut js-close-left-slidebar"><i class="far fa-times-circle"></i></div>
-  <ul class="align-self-center">
-    <li>Order Online</li>
-    <li>About Us</li>
-    <li>Delivery Map</li>
-    <li><a href="#menu">Restaurant Menu</a></li>
-    <li>Catering Menu</li>
-    <li>Contact Us</li>
-  </ul>
-  <div class="contact">
-    <p>Open 7 days, 11a-9p</p>
-    <p><i class="fas fa-phone"></i> <tel>(608) 441-2002</tel></p>
+  <div class="left-container">
+    <div class="slideOut js-close-left-slidebar"><i class="far fa-times-circle"></i></div>
+    <ul>
+      <li>Order Online</li>
+      <li>About Us</li>
+      <li>Delivery Map</li>
+      <li><a href="#menu">Restaurant Menu</a></li>
+      <li>Catering Menu</li>
+      <li>Contact Us</li>
+    </ul>
+    <div class="contact">
+      <p>Open 7 days, 11a-9p</p>
+      <p><i class="fas fa-phone"></i> <tel>(608) 441-2002</tel></p>
+    </div>
   </div>
 </div>
