--- a/css/nav.css
+++ b/css/nav.css
@@ -8,7 +8,7 @@
     margin: 0;
     z-index: 5;
     color:#fff;
-    background-color: transparent;
+    background-color: #333;
 }
 #navbar a{
     color: inherit;
