--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,11 @@ html, body{ height: 100vh; }
   background-attachment: fixed;
   height: 40vh;
 }
+#twitter{
+  padding: 50px;
+  background: url(/images/twitter-background_01.jpg) repeat top center;
+}
+
 .hp-pages li{
     list-style: none;
     display: table-cell;
