--- a/css/nav.css
+++ b/css/nav.css
@@ -85,6 +85,7 @@ nav.navbar-hp.hpv2 {
     top: 0;
     z-index: 2;
     font-size: 1.5rem;
+    box-shadow: 0 0 16px 4px rgba(0, 0, 0, .3);
     width: 100%;
 }
 .navbar-hp .navbar-collapse{
