--- a/_includes/slide-in-nav.html
+++ b/_includes/slide-in-nav.html
@@ -2,12 +2,12 @@
   <div class="left-container">
     <div class="slideOut js-close-left-slidebar"><i class="far fa-times-circle"></i></div>
     <ul>
-      <li>Order Online</li>
-      <li>About Us</li>
-      <li>Delivery Map</li>
-      <li><a href="#menu">Restaurant Menu</a></li>
-      <li>Catering Menu</li>
-      <li>Contact Us</li>
+      <a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank"><li>Order Online</li></a>
+      <a href="#about"><li>About Us</li></a>
+      <a href="#map"><li>Delivery Map</li></a>
+      <a href="#menu"><li>Restaurant Menu</li></a>
+      <a href="#catering"><li>Catering Menu</li></a>
+      <a href="#contact"><li>Contact Us</li></a>
     </ul>
     <div class="contact">
       <p>Open 7 days, 11a-9p</p>
