another scroll attempt

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,5 +65,11 @@
 <script src="/js/slidebars.js"></script>
 <script src="/js/slidebar-scripts.js"></script>
 <script src="/js/my.js"></script>
-
+<script type="text/javascript">
+  EPPZScrollTo.scrollVerticalToElementById('about', 60);
+  EPPZScrollTo.scrollVerticalToElementById('contact', 60);
+  EPPZScrollTo.scrollVerticalToElementById('menu', 60);
+  EPPZScrollTo.scrollVerticalToElementById('catering', 60);
+  EPPZScrollTo.scrollVerticalToElementById('map', 60);
+</script>
 </footer>
