--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,18 +57,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
-<script src="/js/jquery.waypoints.min.js"></script>
-<script src="/js/sticky.min.js"></script>
-<script src="/js/waypoint-scroll.js"></script>
-<script src="/js/parallax.min.js"></script>
+<!-- <script src="/js/jquery.waypoints.min.js"></script> -->
+<!-- <script src="/js/sticky.min.js"></script> -->
+<!-- <script src="/js/waypoint-scroll.js"></script> -->
+<!-- <script src="/js/parallax.min.js"></script> -->
 <script src="/js/slidebars.js"></script>
 <script src="/js/slidebar-scripts.js"></script>
 <script src="/js/my.js"></script>
-<script type="text/javascript">
-  EPPZScrollTo.scrollVerticalToElementById('about', 60);
-  EPPZScrollTo.scrollVerticalToElementById('contact', 60);
-  EPPZScrollTo.scrollVerticalToElementById('menu', 60);
-  EPPZScrollTo.scrollVerticalToElementById('catering', 60);
-  EPPZScrollTo.scrollVerticalToElementById('map', 60);
-</script>
 </footer>
