--- a/css/slidebars.css
+++ b/css/slidebars.css
@@ -38,6 +38,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	overflow-y: auto;
+	box-shadow: 0 0 15px 7px;
 	position: relative;
 	background-color: white; /* Basic background color, overwrite this in your own css. */
 	-webkit-overflow-scrolling: touch; /* Enables momentum scrolling on iOS devices, may be removed by setting to 'auto' in your own CSS. */
