--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -5,6 +5,11 @@
 	<body>
 
 	{% include fixedNav.html %}
+
+	<a href="javascript:void(0)" target="_blank">
+		<div id="orderNow"></div>
+	</a>
+	
 	<div canvas="container" class="page-content">
 		<div class="wrap">
 			{{ content }}
