--- a/css/main.css
+++ b/css/main.css
@@ -71,13 +71,25 @@ html, body{ height: 100vh; }
 #orderNow{
   position: absolute;
   z-index: 10;
-  border-radius: 50%;
-  background-color: #ffcb00;
   right: 30px;
   bottom: 30px;
-  height: 65px;
-  width: 65px;
-  box-shadow: 0 2px 5px 8px rgba(0, 0, 0, .4);
+  padding: 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #333;
+  background-color: #ccff7f;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0 16px #99c64b;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, .4);
+  transition: 3s;
+}
+#orderNow:active {
+  box-shadow: 0 8px #666;
+  transform: translateY(8px);
+  transition: 3s;
 }
 #twitter{
   padding: 50px;
