--- a/_layouts/homepage-v2.html
+++ b/_layouts/homepage-v2.html
@@ -5,11 +5,10 @@
 	<body>
 
 	{% include fixedNav.html %}
-
+	<a href="javascript:void(0)" target="_blank">
+		<div id="orderNow">Order<br>Online</div>
+	</a>
 	<div canvas="container" class="page-content">
-		<a href="javascript:void(0)" target="_blank">
-			<div id="orderNow">Order Online</div>
-		</a>
 		<div class="wrap">
 			{{ content }}
 			{% include footer.html %}
