--- a/css/main.css
+++ b/css/main.css
@@ -68,28 +68,6 @@ html, body{ height: 100vh; }
   background-attachment: fixed;
   height: 40vh;
 }
-#orderNow{
-  position: absolute;
-  z-index: 10;
-  right: 30px;
-  bottom: 30px;
-  padding: 25px;
-  font-size: 24px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: #333;
-  background-color: #ccff7f;
-  border: none;
-  border-radius: 50%;
-  box-shadow: 0 16px #82aa3d;
-  transition: .3s;
-}
-#orderNow:active {
-  box-shadow: 0 8px #000;
-  transform: translateY(8px);
-  transition: .3s;
-}
 #twitter{
   padding: 50px;
   background: url(/images/twitter-background_01.jpg) repeat top center;
@@ -171,7 +149,7 @@ h2.title.menu{
     }
 }
 .blurp{
-    background-image: url(/images/foodcart-1.jpg);
+    background-image: url(/images/banzo-3.jpg);
     background-size: cover;
     background-attachment: fixed;
 }
