--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,26 @@ html, body{ height: 100vh; }
   background-attachment: fixed;
   height: 40vh;
 }
+.button.Order {
+  padding: 25px;
+  line-height:1;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #333;
+  background-color: #ccff7f;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0 16px #99c64b;
+  transition:.1s;
+}
+
+.button.Order:active {
+  box-shadow: 0 3px #99c64b;
+  transform: translateY(13px);
+  transition:.1s;
+}
 #twitter{
   padding: 50px;
   background: url(/images/twitter-background_01.jpg) repeat top center;
