--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ html, body{ height: 100vh; }
   background-attachment: fixed;
   height: 40vh;
 }
-.button.Order {
+button.Order {
   padding: 25px;
   line-height:1;
   font-size: 24px;
@@ -89,7 +89,7 @@ html, body{ height: 100vh; }
   transition:.1s;
 }
 
-.button.Order:active {
+button.Order:active {
   box-shadow: 0 3px #99c64b;
   transform: translateY(13px);
   transition:.1s;
